# udao

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: index.doctree
.doctrees/api_reference/data/: containers.doctree  data_handler.doctree  data_processor.doctree  extractors.doctree  index.doctree  iterators.doctree  predicate_embedders.doctree  preprocessors.doctree
.doctrees/api_reference/model/: embedders.doctree  index.doctree  regressors.doctree  udao_model.doctree
.doctrees/api_reference/optimization/: concepts.doctree  index.doctree  moo.doctree  soo.doctree
.doctrees/user_guide/: data_processing.doctree  index.doctree  introduction.doctree  model.doctree  mogd.doctree  optimization.doctree  optimization_element.doctree
.github/workflows/: ci.yaml  documentation.yaml  pytest.yaml
_sources/api_reference/: index.rst
_sources/api_reference/data/: data_handler.rst  data_processor.rst  extractors.rst  index.rst  predicate_embedders.rst  preprocessors.rst
_sources/api_reference/model/: embedders.rst  regressors.rst  udao_model.rst
_sources/api_reference/optimization/: concepts.rst  index.rst  soo.rst
_sources/user_guide/: data_processing.rst  index.rst  introduction.rst  model.rst  optimization.rst
api_reference/: index.html
api_reference/data/: containers.html  data_handler.html  data_processor.html  extractors.html  index.html  iterators.html  predicate_embedders.html  preprocessors.html
api_reference/model/: embedders.html  index.html  regressors.html  udao_model.html
api_reference/optimization/: concepts.html  index.html  moo.html  soo.html
docs/: conf.py  index.rst
docs/api_reference/data/: containers.rst  iterators.rst
docs/api_reference/model/: index.rst
docs/api_reference/optimization/: moo.rst
docs/user_guide/: mogd.rst  optimization_element.rst
examples/TPCH/: run.py
examples/TPCH/data/: sample_query.txt
udao/: __init__.py
udao/data/: __init__.py
udao/data/containers/: __init__.py  base_container.py  query_structure_container.py  tabular_container.py
udao/data/extractors/: __init__.py  base_extractors.py  predicate_embedding_extractor.py  query_structure_extractor.py  tabular_extractor.py
udao/data/handler/: data_handler.py  data_processor.py
udao/data/iterators/: __init__.py  base_iterator.py  query_plan_iterator.py  tabular_iterator.py
udao/data/predicate_embedders/: __init__.py  base_predicate_embedder.py  doc2vec_embedder.py  utils.py  word2vec_embedder.py
udao/data/preprocessors/: __init__.py  base_preprocessor.py  normalize_preprocessor.py  one_hot_preprocessor.py
udao/data/tests/: conftest.py
udao/data/tests/assets/: sample_plan_1.json  sample_plan_2.json
udao/data/tests/embedders/: test_doc2vec_embedder.py  test_utils.py  test_word2vec_embedder.py
udao/data/tests/extractors/: test_query_structure_extractor.py  test_tabular_extractor.py
udao/data/tests/handler/: test_data_processor.py  test_handler.py
udao/data/tests/iterators/: dummy_udao_iterator.py  test_query_graph_iterator.py  test_tabular_iterator.py
udao/data/tests/preprocessors/: test_normalize_preprocessor.py  test_one_hot_preprocessor.py
udao/data/tests/utils/: test_query_plan.py
udao/data/utils/: query_plan.py  utils.py
udao/model/: __init__.py  model.py  module.py
udao/model/embedders/: __init__.py  base_embedder.py  base_graph_embedder.py  graph_averager.py  graph_transformer.py
udao/model/embedders/layers/: graph_transformer_layer.py  iso_bn.py  multi_head_attention.py
udao/model/regressors/: __init__.py  base_regressor.py  mlp.py
udao/model/regressors/layers/: mlp_readout.py
udao/model/tests/: test_model.py  test_module.py
udao/model/tests/embedders/: conftest.py  dummy_embedder.py  test_base_graph_embedder.py  test_graph_averager.py  test_graph_transformer.py
udao/model/tests/embedders/layers/: test_multi_head_attention.py
udao/model/tests/regressors/: dummy_regressor.py  test_mlp.py
udao/model/tests/regressors/layers/: test_mlp_readout.py
udao/model/tests/utils/: test_losses.py  test_metrics.py
udao/model/utils/: losses.py  metrics.py  schedulers.py  utils.py
udao/optimization/: __init__.py
udao/optimization/concepts/: __init__.py  constraint.py  objective.py  problem.py  utils.py  variable.py
udao/optimization/moo/: evolutionary.py  generic_moo.py  mo_solver.py  weighted_sum.py
udao/optimization/moo/progressive_frontier/: __init__.py  base_progressive_frontier.py  parallel_progressive_frontier.py  sequential_progressive_frontier.py
udao/optimization/soo/: grid_search_solver.py  mogd.py  random_sampler_solver.py  sampler_solver.py  so_solver.py
udao/optimization/tests/moo/: conftest.py  test_parallel_progressive_frontier.py  test_sequential_progressive_frontier.py  test_weighted_sum.py
udao/optimization/tests/soo/: test_grid_search.py  test_mogd.py  test_random_sampler.py
udao/optimization/tests/utils/: test_moo_utils.py
udao/optimization/utils/: exceptions.py  moo_utils.py
udao/utils/: interfaces.py  logging.py
user_guide/: data_processing.html  index.html  introduction.html  model.html  mogd.html  optimization.html  optimization_element.html
